--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Hello Buffer</title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="/assets/js/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
 
