Add initial HTML for buffer logo recreation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 	<body>
 		<section class="active" id="section0">
 			<h1>Oh, Hello Buffer!</h1>
+			<div class="buffer-top">&nbsp;</div>
+			<div class="square1">&nbsp;</div>
+			<div class="square2">&nbsp;</div>
+			<div class="square3top">&nbsp;</div>
+			<div class="square3">&nbsp;</div>
+			<div class="square4">&nbsp;</div>
+			<div class="square5top">&nbsp;</div>
+			<div class="square5">&nbsp;</div>
+			
 		</section>
 		<section id="section1">
 			<h2>I've been using your product for almost this many. (photo of a kid's hand with two fingers up)</h2>
