--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Hello Buffer</title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="/assets/js/jquery.fullPage.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="assets/js/jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
 
 	<!--[if IE]>
 		<script type="text/javascript">
@@ -14,7 +14,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>	
 	
-	<script type="text/javascript" src="/assets/js/jquery.fullPage.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.fullPage.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$.fn.fullpage();
@@ -36,7 +36,7 @@
 		</section>
 		<section id="section1" data-anchor="i-am-a-user">
 			<h2>I've been using Buffer pretty religiously for almost this many:</h2>
-			<img src="/assets/img/this-many.jpg" alt="This Many (2)">
+			<img src="assets/img/this-many.jpg" alt="This Many (2)">
 		</section>
 		<section id="section2"data-anchor="your-awesome-team">
 			<h2>And I quickly grew to love not only the app but also the awesome people behind the app:</h2>
