--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<section id="section6" data-anchor="the-approach"><h2>So why go through this elaborate setting just to get a job?</h2></section>
 		<section id="section7" data-anchor="not-a-job"><h2>Well, I don't want a job. I want something that I am excited to wake up to and work on. I want something that respects my time as much as I respect it's time. I want to work as a team rather than a department.</h2></section>
 		<section id="section8" data-anchor="with-not-for"><h2>I want to work <em>with</em> you. Not <em>for</em> you.</h2></section>
-		<section id="section9" data-anchor="conversations"><h2>If all this gets is a few interesting conversations, then even though I will be disappoiinted that I didn't get to join the team, I will have at the very least had a dialogue with a group of people that I deeply respect and will give me a bit of perspective.</h2></section>
+		<section id="section9" data-anchor="conversations"><h2>If all this gets is a few interesting conversations, then even though I will be disappointed that I didn't get to join the team, I will have at the very least had a dialogue with a group of people that I deeply respect and will give me a bit of perspective.</h2></section>
 		<section id="section10" data-anchor="some-options">
 			<div class="slide"><h2>So I guess you have a couple of options now:</h2></div>
 			<div class="slide"><h2>1. Ignore this approach to starting a conversation with you.</h2></div>
