--- a/index.html
+++ b/index.html
@@ -72,24 +72,32 @@
 			<h2>I want to work with you.</h2>
 		</section>
 		<section id="section5" data-anchor="why-me">
-			<div class="slide" data-anchor="why-1"><h2>So why would you want to work with me? Let me give you a few reasons <span class="arrow">&#8605;</span></h2></div>
-			<div class="slide" data-anchor="why-2"><p>I helped save babies in Belize (<a href="http://www.hsc.edu/Student-Life/Life-at-Hampden-Sydney/The-Outdoor-Experience/Beyond-The-Hill/Belize/Belize-Service-Trip-2011.html">true story</a>).</p></div>
-			<div class="slide" data-anchor="why-3"><p>Though I may have a seemingly odd skill-set and degrees (Philosophy &amp; History B.A. and Interactive Media M.A.), that combination of skills has given me insight to how people think through problems and also has further reinforced my insatiable urge to learn.</p></div>
-			<div class="slide" data-anchor="why-4"><p>I think that your emphasis on transparency and willingness to try new things is at the core of what I believe in and is something that is desperately needed in our industry (both product-wise and agency-wise). If I am holding information it is because I don't have enough to make an informed decision on yet rather than just keeping someone in the dark.</p></div>
-			<div class="slide" data-anchor="why-5"><p>You position yourselves as both thought leaders but also with your ears to the ground to stay open to change and other possibilities. As someone who has lived an academic life then gone into the workforce, the ability to straddle both rigorous and open is diffcult but rewarding both from a personal and a consumer standpoint as you keep learning and are able to keep the learning process going for everyone involved.</p></div>
-			<div class="slide" data-anchor="why-6">
-				<p>Your responsiveness to customers is indicative of a company who focuses on not only the big picture of how the product works but also that there are real users with real, legitimate problems and you may not always have it right the first time. Having been in an agency-setting for almost two years, I can say that I know how huge a difference even a short email or tweet saying "We're on it" can make to a client or user.</p> 
-				<p>I have to live behind my email and IM client (usually Adium) for the majority of the day and have dealt with the whole spectrum of issues from "something is wrong, but its not affecting anyone right now" to the walking-out-the-door-then-something-has-melted-down call. Though I don't think anyone loves the latter, the satisfaction of fixing something then hearing a sigh of relief come out of your email can be a gratifying experience, no matter the stress level.</p>
+			<div class="slide" data-anchor="why-intro"><h2>So why would you want to work with me? Let me give you a few reasons <span class="arrow">&#8605;</span></h2></div>
+			<!-- Slides is one of the major reasons why I went with fullPage.JS as it came with this out of the box. Ideally the implementation would be different in something much larger scale but this worked for this site. -->
+			<div class="slide" data-anchor="why-babies">
+				<p>I helped save babies in Belize (<a href="http://www.hsc.edu/Student-Life/Life-at-Hampden-Sydney/The-Outdoor-Experience/Beyond-The-Hill/Belize/Belize-Service-Trip-2011.html">true story</a>).</p>
 			</div>
-			<div class="slide" data-anchor="why-7">
-				<p>While in graduate school I ran a team of 4 to help deliver a site and social media package for the Citizens Foundation in Iceland. This required not only answering to the client and our main project manager, but also dividing my time between management and creating devliberable code within a two-week timeframe. Once joining a small agency, I have had to split my time even more between being a social media strategist, project manager, developer, creative associate, product manager, UX consultant, among others. I recently wrapped a year and a half long project with my agency where I had to be the project manager, development project manager, developer, UX designer, and content manager. </p>
-				<p>The project, which has it's own long story associated with it (feel free to ask), forced me to see some of the finer aspects of those positions and what can happen when those different positions conflict with one another and the client. It is easy to say I wear a lot of hats, but I'd rather say I have many squares in my quilt; each part, no matter how small, is integral to who I am, how I think, and influence everything else I do.</p>
+			<div class="slide" data-anchor="why-degrees">
+				<p>Philosophy &amp; History B.A. + Interactive Media M.A. = Insatiable urge to learn and tackle problems large and small.</p>
 			</div>
-			<div class="slide" data-anchor="why-8">
-				<p>Learning is a huge part of who I am and I can see from what Buffer posts about and the job descriptions, learning and growth is a big part of what Buffer is about. I love trying something new and even if the project doesn't work out, I enjoy the process of trying then applying what I learned to something new. </p> 
-				<p>For instance, this microsite you are reading is an experiment in iteslf: tying in social media, a javascript library I haven't used before, along with stretching some of my CSS techniques that I have been further developing over recent projects to make this as lean and responsive as possible.</p>
+			<div class="slide" data-anchor="why-transparency">
+				<p>Your emphasis on transparency and willingness to try new things is at the core of what I believe in and is something that is desperately needed in our industry (both product-wise and agency-wise).</p>
 			</div>
-			<div class="slide" data-anchor="why-9">I have Tron-like tendencies. (I fight for the user)</div>
+			<div class="slide" data-anchor="why-leaders">
+				<p>Your position as both thought leaders and feature leaders is diffcult to maintain but rewarding both from a personal and a consumer standpoint as you are not afraid to continue learning and are able to improve people and your product at every level.</p>
+			</div>
+			<div class="slide" data-anchor="why-service">
+				<p>Your responsiveness to customers is indicative of a company who focuses on not only the big picture of the product but also that there are real users with real, legitimate problems and you may not always have it right the first time; this speaks volumes to your company's character.</p> 
+			</div>
+			<div class="slide" data-anchor="why-deliver">
+				<p>While in graduate school I ran a team of 4 to help deliver a site and social media package for the Citizens Foundation in Iceland within a two-week timeframe. This reinforced the fact that at heart I am a generalist and feel comfortable being a project manager, development project manager, developer, UX designer, and content manager among anything else that is needed. </p>
+			</div>
+			<div class="slide" data-anchor="why-learn">
+				<p>Learning and trying new things are a huge part of who I am and I can see from your blog posts and the job descriptions, learning and growth is a huge part of what Buffer is about and that is a culture I want to contribute to.</p> 
+			</div>
+			<div class="slide" data-anchor="why-tron">
+				<p>I have Tron-like tendencies. (I fight for the user)</p>
+			</div>
 		</section>
 		<section id="section6" data-anchor="the-approach"><h2>So why go through this elaborate setting just to get a job?</h2></section>
 		<section id="section7" data-anchor="not-a-job"><h2>Well, I don't want a job. I want something that I am excited to wake up to and work on. I want something that respects my time as much as I respect it's time. I want to work as a team rather than a department.</h2></section>
