Copy tweaks and inline comment

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div class="slide"><h2>4. Contact me, find out more about how I will bring world domination to Buffer, and send me to Buffer Bootcamp (I have a duffel packed).</h2></div>
 		</section>
 		<section id="11" data-anchor="thanks">
-			<h2>In conclusion, thank you for taking the time to look at this site.</h2>
+			<h2>Thank you for taking the time to look at this site.</h2>
 			<h3>You can get in touch with me in one of these ways:</h3>
 			<div class="contact-this">
 				<a href="mailto:andrew.e.mauney@gmail.com">Email/Hangouts/Google+</a>
@@ -120,9 +120,10 @@
 			</div>
 		</section>
 		<section id="section12" data-anchor="colophon">
+			<!-- If you haven't picked it up by now, I am a tabs guy. -->
 			<h2>Colophon</h2>
 			<div class="colophon">
-			<h3>Tools Used:</h3>
+				<h3>Tools Used:</h3>
 				<ul>
 					<li>My own <a href="https://github.com/chryton/fullPage.js">fork</a> of <a href="https://github.com/alvarotrigo/fullPage.js">fullPage.js</a></li>
 					<li><a href="http://sass-lang.com/">SASS</a> (technically SCSS)</li>
