Add special thanks section to colophon

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
 					<li><a href="">Transmit</a> (for checks and occasional <a href="http://css-tricks.com/deployment/">commando deployment</a>)</li>
 					<li>Image on #i-am-a-user courtesy of Danilo Rizzuti / FreeDigitalPhotos.net</li>
 				</ul>
+				<h3>With a Little Help From My Friends:</h3>
+				<ul>
+					<li><a href="www.linkedin.com/pub/helen-chatt/19/261/383">Helen Chatt</a> for being there to push and nag me to keep me from procrastinating. Also, Mayan cocoa no-bake cookies.</li>
+					<li><a href="">Sam Earls</a> for being helpful with edits to my stream of conciousness and being six feet tall.</li>
+					<li><a href="">Zan Gantt</a> for being far better at me than Halo and offering some of hte best design help I could ask for.</li>
+					<li><a href="http://www.johnbhartley.com/">John Hartley</a> for being nerd-baller with honest suggestions and comments.</li>
+					<li><a href="http://www.linkedin.com/in/steudel">Mark Steudel</a> for being a mentor and suffering through my inane instant messages.</li>
+				</ul>
 			</div>
 		</section>
 	</body>
