Tweaks to colophon and web font includes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		I'm not a huge fan of inline documentation unless I am sending out something others will be using quite regularly. 
 		At my agency, I am also the guy who writes the end-user docs which we use our own doc-presenter for at http://docs.madmonkdev2.com.
 		But for you, I guess I can make a minor change in my workflow and put some thoughts/explanations. -->
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Yellowtail|Roboto+Slab|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="http://i.icomoon.io/public/temp/3888106bed/UntitledProject1/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/js/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
 
@@ -114,15 +115,16 @@
 			<h2>Thank you for taking the time to look at this site.</h2>
 			<h3>You can get in touch with me in one of these ways:</h3>
 			<div class="contact-this">
-				<a href="mailto:andrew.e.mauney@gmail.com">Email/Hangouts/Google+</a>
-				<a href="http://www.twitter.com/chrytonbaine">Twitter</a>
-				<a href="http://www.linkedin.com/andrewemauney">LinkedIn</a>
+				<a href="mailto:andrew.e.mauney@gmail.com" alt="Email/Hangouts/Google+" class="google icon-google-plus-sign"></a>
+				<a href="http://www.twitter.com/chrytonbaine" alt="Twitter" class="twitter icon-twitter-sign"></a>
+				<a href="http://www.linkedin.com/andrewemauney" alt="LinkedIn" class="linkedin icon-linkedin-sign"></a>
 			</div>
 		</section>
 		<section id="section12" data-anchor="colophon">
 			<!-- If you haven't picked it up by now, I am a tabs guy. -->
-			<h2>Colophon</h2>
+			
 			<div class="colophon">
+				<h2>Colophon</h2>
 				<h3>Tools Used:</h3>
 				<ul>
 					<li>My own <a href="https://github.com/chryton/fullPage.js">fork</a> of <a href="https://github.com/alvarotrigo/fullPage.js">fullPage.js</a></li>
@@ -147,6 +149,7 @@
 					<li><a href="http://www.johnbhartley.com/">John Hartley</a> for being nerd-baller with honest suggestions and comments.</li>
 					<li><a href="http://www.linkedin.com/in/steudel">Mark Steudel</a> for being a mentor and suffering through my inane instant messages.</li>
 				</ul>
+				<span class="transformers"></span>
 			</div>
 		</section>
 	</body>
