Comment language tweak

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	<body>
 		<section class="active" id="section0" data-anchor="welcome">
 			<h1>Oh, Hello Buffer!</h1>
-			<!-- So, this was more ambitious than I had hoped but I was able to pull it off after a few iterations. 
-			I really wanted to try and use some pseudo-elements and nail your rounded-corners but the stacking elements didn't really like that. -->
+			<!-- So, this was more ambitious than I had planned but I was able to pull it off after a few iterations. 
+			I really wanted to try and use some pseudo-elements and nail your rounded-corners but the stacking triangle elements didn't really like that. -->
 			<div class="buffer-top">&nbsp;</div>
 			<div class="square1">&nbsp;</div>
 			<div class="square2">&nbsp;</div>
