--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<h2>I want to work with you.</h2>
 		</section>
 		<section id="section5" data-anchor="why-me">
-			<div class="slide" data-anchor="why-intro"><h2>So why would you want to work with me? Let me give you a few reasons <span class="arrow">&#8605;</span></h2></div>
+			<div class="slide" data-anchor="why-intro"><h2>Why would you want to work with me? Let me give you a few reasons <span class="arrow">&#8605;</span></h2></div>
 			<!-- Slides is one of the major reasons why I went with fullPage.JS as it came with this out of the box. Ideally the implementation would be different in something much larger scale but this worked for this site. -->
 			<div class="slide" data-anchor="why-babies">
 				<p>I helped save babies in Belize (<a href="http://www.hsc.edu/Student-Life/Life-at-Hampden-Sydney/The-Outdoor-Experience/Beyond-The-Hill/Belize/Belize-Service-Trip-2011.html">true story</a>).</p>
