Copy tweaks, add comment about GitHub raw links, add data-anchor for second slider, separate email from G+ link, add new icon, comment on colors

--- a/index.html
+++ b/index.html
@@ -97,25 +97,28 @@
 				<p>Learning and trying new things are a huge part of who I am and I can see from your blog posts and the job descriptions, learning and growth is a huge part of what Buffer is about and that is a culture I want to contribute to.</p> 
 			</div>
 			<div class="slide" data-anchor="why-tron">
-				<p>I have Tron-like tendencies. (I fight for the user)</p>
+				<p>I have Tron-like tendencies. (I fight for the user!)</p>
 			</div>
 		</section>
 		<section id="section6" data-anchor="the-approach"><h2>So why go through this elaborate setting just to get a job?</h2></section>
+		<!-- So, as it turns out, you can actually hotlink an image from a Github raw link. Subtle Patterns was down for me while I was styling the section backgrounds so I figured I would play around a bit with the backgrounds just hooking into their repo in this manner. Lazy, yes. But also saves a huge amount of time when comapred to downloading and trying each one. -->
 		<section id="section7" data-anchor="not-a-job"><h2>Well, I don't want a job. I want something that I am excited to wake up to and work on. I want something that respects my time as much as I respect it's time. I want to work as a team rather than a department.</h2></section>
 		<section id="section8" data-anchor="with-not-for"><h2>I want to work <em>with</em> you. Not <em>for</em> you.</h2></section>
 		<section id="section9" data-anchor="conversations"><h2>If all this gets is a few interesting conversations, then even though I will be disappointed that I didn't get to join the team, I will have at the very least had a dialogue with a group of people that I deeply respect and will give me a bit of perspective.</h2></section>
 		<section id="section10" data-anchor="some-options">
-			<div class="slide"><h2>So I guess you have a couple of options now:</h2></div>
-			<div class="slide"><h2>1. Ignore this approach to starting a conversation with you.</h2></div>
-			<div class="slide"><h2>2. Contact me, tell me I am crazy person.</h2></div>
-			<div class="slide"><h2>3. Contact me, tell me I am crazy, then </h2></div>
-			<div class="slide"><h2>4. Contact me, find out more about how I will bring world domination to Buffer, and send me to Buffer Bootcamp (I have a duffel packed).</h2></div>
+			<div class="slide" data-anchor="options"><h2>So I guess you have a couple of options now:</h2></div>
+			<div class="slide" data-anchor="option1"><h2>1. Ignore this approach to starting a conversation with you.</h2></div>
+			<div class="slide" data-anchor="option2"><h2>2. Contact me, tell me I am crazy person.</h2></div>
+			<div class="slide" data-anchor="option3"><h2>3. Contact me, tell me I am crazy, then see #1.</h2></div>
+			<div class="slide" data-anchor="option4"><h2>4. Contact me, find out more about how I will bring world domination to Buffer, and send me to Buffer Bootcamp (I have a duffel packed, though I may need to take out my climbing equipment).</h2></div>
 		</section>
 		<section id="11" data-anchor="thanks">
 			<h2>Thank you for taking the time to look at this site.</h2>
 			<h3>You can get in touch with me in one of these ways:</h3>
 			<div class="contact-this">
-				<a href="mailto:andrew.e.mauney@gmail.com" alt="Email/Hangouts/Google+" class="google icon-google-plus-sign"></a>
+				<!-- Colors lovingly taken from your site and UI. Imitation is the sincerest form of flattery, right? But flattery also gets you nowhere so I feel like that is just an impasse. -->
+				<a href="mailto:andrew.e.mauney@gmail.com" alt="Email/Hangouts" class="google icon-at"></a>
+				<a href="https://plus.google.com/+AndrewMauney/" alt="Google+" class="google icon-google-plus-sign"></a>
 				<a href="http://www.twitter.com/chrytonbaine" alt="Twitter" class="twitter icon-twitter-sign"></a>
 				<a href="http://www.linkedin.com/andrewemauney" alt="LinkedIn" class="linkedin icon-linkedin-sign"></a>
 			</div>
