--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			 var console = { log: function() {} };
 		</script>
 	<![endif]-->
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>	
 	
@@ -22,8 +23,10 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$.fn.fullpage();
+			$('a:not([href*="'+window.location.host+'"]):not([href^="#"]):not([href^="/"]):not([href^="mailto:"]):not([href^="javascript"])').attr('target','_blank');
 		});
 	</script>
+	
 </head>
 	<body>
 		<section class="active" id="section0" data-anchor="welcome">
