Add icon divs, note at end of colophon

--- a/index.html
+++ b/index.html
@@ -77,28 +77,36 @@
 		<section id="section5" data-anchor="why-me">
 			<div class="slide" data-anchor="why-intro"><h2>Why would you want to work with me? Let me give you a few reasons <span class="arrow">&#8605;</span></h2></div>
 			<!-- Slides is one of the major reasons why I went with fullPage.JS as it came with this out of the box. Ideally the implementation would be different in something much larger scale but this worked for this site. -->
-			<div class="slide" data-anchor="why-babies">
+			<div class="slide center-text" data-anchor="why-babies">
+				<div class="icon-bowtie"></div>
 				<p>I helped save babies in Belize (<a href="http://www.hsc.edu/Student-Life/Life-at-Hampden-Sydney/The-Outdoor-Experience/Beyond-The-Hill/Belize/Belize-Service-Trip-2011.html">true story</a>).</p>
 			</div>
 			<div class="slide" data-anchor="why-degrees">
+				<div class="icon-graduation"></div>
 				<p>Philosophy &amp; History B.A. + Interactive Media M.A. = Insatiable urge to learn and tackle problems large and small.</p>
 			</div>
 			<div class="slide" data-anchor="why-transparency">
+				<div class="icon-exchange"></div>
 				<p>Your emphasis on transparency and willingness to try new things is at the core of what I believe in and is something that is desperately needed in our industry (both product-wise and agency-wise).</p>
 			</div>
 			<div class="slide" data-anchor="why-leaders">
+				<div class="icon-rocket"></div>
 				<p>Your position as both thought leaders and feature leaders is diffcult to maintain but rewarding both from a personal and a consumer standpoint as you are not afraid to continue learning and are able to improve people and your product at every level.</p>
 			</div>
 			<div class="slide" data-anchor="why-service">
+				<div class="icon-headphones2"></div>
 				<p>Your responsiveness to customers is indicative of a company who focuses on not only the big picture of the product but also that there are real users with real, legitimate problems and you may not always have it right the first time; this speaks volumes to your company's character.</p> 
 			</div>
 			<div class="slide" data-anchor="why-deliver">
+				<div class="icon-clock"></div>
 				<p>While in graduate school I ran a team of 4 to help deliver a site and social media package for the Citizens Foundation in Iceland within a two-week timeframe. This reinforced the fact that at heart I am a generalist and feel comfortable being a project manager, development project manager, developer, UX designer, and content manager among anything else that is needed. </p>
 			</div>
 			<div class="slide" data-anchor="why-learn">
+				<div class="icon-book"></div>
 				<p>Learning and trying new things are a huge part of who I am and I can see from your blog posts and the job descriptions, learning and growth is a huge part of what Buffer is about and that is a culture I want to contribute to.</p> 
 			</div>
-			<div class="slide" data-anchor="why-tron">
+			<div class="slide center-text" data-anchor="why-tron">
+				<div class="icon-tron"></div>
 				<p>I have Tron-like tendencies. (I fight for the user!)</p>
 			</div>
 		</section>
@@ -157,8 +165,11 @@
 					<li><a href="http://www.johnbhartley.com/">John Hartley</a> for being nerd-baller with honest suggestions and comments.</li>
 					<li><a href="http://www.linkedin.com/in/steudel">Mark Steudel</a> for being a mentor and suffering through my inane instant messages.</li>
 				</ul>
-				<span class="icon-transformers"></span>
+				<!-- I should also note that I am a huge Transformers fan. -->
+				<div class="icon-transformers"></div>
 			</div>
 		</section>
+
 	</body>
+
 </html>
