Add Buffer Button
Meta. Cool, cool, cool.

--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
 					<li><a href="http://www.linkedin.com/in/steudel">Mark Steudel</a> for being a mentor and suffering through my inane instant messages.</li>
 				</ul>
 				<!-- I should also note that I am a huge Transformers fan. -->
+				<div class="bufferthis">
+					<a href="http://bufferapp.com/add" class="buffer-add-button" data-url="http:&#x2F;&#x2F;hellobuffer.com" data-count="vertical" data-via="chrytonbaine" >Buffer</a>
+					<script type="text/javascript" src="https://d389zggrogs7qo.cloudfront.net/js/button.js"></script>
+				</div>
 				<div class="icon-transformers"></div>
 			</div>
 		</section>
