Copy tweaks/updates

--- a/index.html
+++ b/index.html
@@ -114,34 +114,34 @@
 			</div>
 			<div class="slide" data-anchor="why-transparency">
 				<div class="icon-exchange"></div>
-				<p>Your emphasis on transparency and willingness to try new things is at the core of what I believe in and is something that is desperately needed in our industry (both product-wise and agency-wise).</p>
+				<p>Your emphasis on transparency and willingness to try new things is at the core of what I believe in and is something that is desperately needed in our industry (both product-wise and agency-wise). I, like you, try to be as transparent as possible whether it is on the <a href="https://twitter.com/chrytonbaine">web</a> or in person.</p>
 			</div>
 			<div class="slide" data-anchor="why-leaders">
 				<div class="icon-rocket"></div>
-				<p>Your position as both thought leaders and feature leaders is diffcult to maintain but rewarding both from a personal and a consumer standpoint as you are not afraid to continue learning and are able to improve people and your product at every level.</p>
+				<p>Your position as both thought leaders and feature leaders is difficult to maintain but rewarding both from a personal and a consumer standpoint as you are not afraid to continue learning and are able to improve people and your product at every level.</p>
 			</div>
 			<div class="slide" data-anchor="why-service">
 				<div class="icon-headphones2"></div>
-				<p>Your responsiveness to customers is indicative of a company who focuses on not only the big picture of the product but also that there are real users with real, legitimate problems and you may not always have it right the first time; this speaks volumes to your company's character.</p> 
+				<p>Your responsiveness to customers is indicative of a company who focuses on not only the big picture of the product but also that there are real users with real, legitimate problems and you may not always have it right the first time; this speaks volumes to your company's character. Being in the position of a project manager at a small agency, I have seen and dealt with a range of reactions from our clients.</p>
 			</div>
 			<div class="slide" data-anchor="why-deliver">
 				<div class="icon-clock"></div>
-				<p>While in graduate school I ran a team of 4 to help deliver a site and social media package for the Citizens Foundation in Iceland within a two-week timeframe. This reinforced the fact that at heart I am a generalist and feel comfortable being a project manager, development project manager, developer, UX designer, and content manager among anything else that is needed. </p>
+				<p>While in graduate school I ran a team of 4 to help deliver a site and social media package for the Citizens Foundation in Iceland within a two-week timeframe. This reinforced the fact that at heart I am a generalist. I feel comfortable being anything from a project manager or developer to a UX designer and content manager. Basically anything that is needed, I'll be there doing my best.</p>
 			</div>
 			<div class="slide" data-anchor="why-learn">
 				<div class="icon-book"></div>
-				<p>Learning and trying new things are a huge part of who I am and I can see from your blog posts and the job descriptions, learning and growth is a huge part of what Buffer is about and that is a culture I want to contribute to.</p> 
+				<p>Learning and trying new things are a huge part of who I am. Following your blog posts and reading your job descriptions, learning and growth is a huge part of what Buffer is about. That is a culture I want to contribute to.</p> 
 			</div>
 			<div class="slide center-text" data-anchor="why-tron">
 				<div class="icon-tron"></div>
 				<p>I have Tron-like tendencies. (I fight for the user!)</p>
 			</div>
 		</section>
-		<section id="section6" data-anchor="the-approach"><h2>So why go through this elaborate setting just to get a job?</h2></section>
+		<section id="section6" data-anchor="the-approach"><h2>So why go through this elaborate process just to get a job?</h2></section>
 		<!-- So, as it turns out, you can actually hotlink an image from a Github raw link. Subtle Patterns was down for me while I was styling the section backgrounds so I figured I would play around a bit with the backgrounds just hooking into their repo in this manner. Lazy, yes. But also saves a huge amount of time when comapred to downloading and trying each one. -->
-		<section id="section7" data-anchor="not-a-job"><h2>Well, I don't want a job. I want something that I am excited to wake up to and work on. I want something that respects my time as much as I respect it's time. I want to work as a team rather than a department.</h2></section>
+		<section id="section7" data-anchor="not-a-job"><h2>Well, I don't want a job. I want something that I am excited to wake up to and work on. I want something that respects my time as much as I respect its time. I want to work as a team rather than a department.</h2></section>
 		<section id="section8" data-anchor="with-not-for"><h2>I want to work <em>with</em> you. Not <em>for</em> you.</h2></section>
-		<section id="section9" data-anchor="conversations"><h2>If all this gets is a few interesting conversations, then even though I will be disappointed that I didn't get to join the team, I will have at the very least had a dialogue with a group of people that I deeply respect and will give me a bit of perspective.</h2></section>
+		<section id="section9" data-anchor="conversations"><h2>And if all this gets is a few interesting conversations, I might be disappointed not to join the team, but at the very least I'll have had the chance to engage in a dialogue with a group of people whom I deeply respect.</h2></section>
 		<section id="section10" data-anchor="some-options">
 			<div class="slide" data-anchor="options"><h2>So I guess you have a couple of options now:</h2></div>
 			<div class="slide" data-anchor="option1"><h2>1. Ignore this approach to starting a conversation with you.</h2></div>
