--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="slide" data-anchor="why-leaders">
 				<div class="icon-rocket"></div>
-				<p>Your position as both thought leaders and feature leaders is difficult to maintain but rewarding both from a personal and a consumer standpoint as you are not afraid to continue learning and are able to improve people and your product at every level.</p>
+				<p>Your position as both thought leaders and feature leaders is difficult to maintain but rewarding both from a personal and a consumer standpoint as you are not afraid to continue learning and are able to improve people and your product at every level. As a developer and project manager I strive to find the best tool, workflow, and solution for clients that fits their goals and not just our bottom line.</p>
 			</div>
 			<div class="slide" data-anchor="why-service">
 				<div class="icon-headphones2"></div>
